# password_cat

./: .gitignore  README.md  bump-version.cjs  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml  makefile.yml
scripts/: sign-mac.cjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Base64Tool.vue  CertDecoder.vue  HashTool.vue  HistoryPanel.vue  JsonFormatter.vue  JwtTool.vue  PasswordGenerator.vue  RegexTool.vue  SqlFormatter.vue  TextDiff.vue  TimestampTool.vue
src/router/: index.ts
src/stores/: history.ts  theme.ts  vault.ts
src/views/: MainView.vue  SetupView.vue  UnlockView.vue
